# license_test

./: .bazelignore  .bazelrc  .gitignore  .pre-commit-config.yaml  BUILD  MODULE.bazel  Makefile  README.md  WORKSPACE  def.bzl  go.mod  go.sum  main.go  private.bzl  tools.go
.github/workflows/: test.yaml
dev/: BUILD
docs/: BUILD  def.md
example/: BUILD  MODULE.bazel  missing-header.cc
private/: BUILD  def.bzl
